// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createTheme generates default theme 1`] = `
Object {
  "backgroundColor_active": "#ebeff5",
  "backgroundColor_dangerPrimary": "#de1b1b",
  "backgroundColor_dangerPrimary_active": "#b80d0d",
  "backgroundColor_dangerPrimary_focus": "#de1b1b",
  "backgroundColor_dangerPrimary_hover": "#f55353",
  "backgroundColor_danger_active": "#fad4d4",
  "backgroundColor_danger_focus": "#faf0f0",
  "backgroundColor_danger_hover": "#faf0f0",
  "backgroundColor_disabled": "#dde3ed",
  "backgroundColor_focus": "#f5f7fa",
  "backgroundColor_hover": "#f5f7fa",
  "backgroundColor_successPrimary": "#2a854e",
  "backgroundColor_successPrimary_active": "#20693d",
  "backgroundColor_successPrimary_focus": "#2a854e",
  "backgroundColor_successPrimary_hover": "#3ba164",
  "backgroundColor_success_active": "#abedc5",
  "backgroundColor_success_focus": "#e1faeb",
  "backgroundColor_success_hover": "#e1faeb",
  "backgroundColor_themePrimary": "#3272d9",
  "backgroundColor_themePrimary_active": "#1d5bbf",
  "backgroundColor_themePrimary_focus": "#3272d9",
  "backgroundColor_themePrimary_hover": "#5691f0",
  "backgroundColor_theme_selected": "#f0f5fc",
  "backgroundColor_theme_selectedActive": "#accbfc",
  "backgroundColor_theme_selectedHover": "#cfe0fc",
  "backgroundColor_warningPrimary": "#ad5f00",
  "backgroundColor_warningPrimary_active": "#8a4d03",
  "backgroundColor_warningPrimary_focus": "#ad5f00",
  "backgroundColor_warningPrimary_hover": "#cf7911",
  "backgroundColor_warning_active": "#fad8af",
  "backgroundColor_warning_focus": "#fcf2e6",
  "backgroundColor_warning_hover": "#fcf2e6",
  "borderColor": "#c8d1e0",
  "borderColor_danger": "#de1b1b",
  "borderColor_danger_active": "#b80d0d",
  "borderColor_danger_focus": "#b80d0d",
  "borderColor_danger_hover": "#f55353",
  "borderColor_success": "#2a854e",
  "borderColor_success_active": "#20693d",
  "borderColor_success_focus": "#20693d",
  "borderColor_success_hover": "#3ba164",
  "borderColor_theme": "#3272d9",
  "borderColor_theme_active": "#1d5bbf",
  "borderColor_theme_focus": "#1d5bbf",
  "borderColor_theme_hover": "#5691f0",
  "borderColor_warning": "#ad5f00",
  "borderColor_warning_active": "#8a4d03",
  "borderColor_warning_focus": "#8a4d03",
  "borderColor_warning_hover": "#cf7911",
  "borderRadius_1": "0.1875em",
  "boxShadow_1": "0 1px 2px 0 rgba(0,0,0,0.2), 0 2px 4px 0 rgba(0,0,0,0.2)",
  "boxShadow_2": "0 2px 4px 0 rgba(0,0,0,0.2), 0 4px 8px 0 rgba(0,0,0,0.2)",
  "boxShadow_3": "0 4px 8px 0 rgba(0,0,0,0.2), 0 8px 16px 0 rgba(0,0,0,0.2)",
  "boxShadow_4": "0 8px 16px 0 rgba(0,0,0,0.2), 0 20px 16px -8px rgba(0,0,0,0.2)",
  "boxShadow_5": "0 16px 24px 0 rgba(0,0,0,0.2), 0 32px 24px -16px rgba(0,0,0,0.2)",
  "boxShadow_focusInner": "#ffffff",
  "breakpoint_medium": "768px",
  "breakpoint_narrow": "512px",
  "breakpoint_wide": "1024px",
  "color": "#333840",
  "color_black": "#1d1f24",
  "color_danger": "#de1b1b",
  "color_dangerPrimary": "#ffffff",
  "color_danger_active": "#b80d0d",
  "color_danger_focus": "#de1b1b",
  "color_danger_hover": "#f55353",
  "color_disabled": "#afbacc",
  "color_gray_10": "#f5f7fa",
  "color_gray_100": "#333840",
  "color_gray_20": "#ebeff5",
  "color_gray_30": "#dde3ed",
  "color_gray_40": "#c8d1e0",
  "color_gray_50": "#afbacc",
  "color_gray_60": "#8e99ab",
  "color_gray_70": "#707a8a",
  "color_gray_80": "#58606e",
  "color_gray_90": "#434a54",
  "color_inverted": "#ffffff",
  "color_mouse": "#58606e",
  "color_readOnly": "#58606e",
  "color_required": "#de1b1b",
  "color_success": "#2a854e",
  "color_successPrimary": "#ffffff",
  "color_success_active": "#20693d",
  "color_success_focus": "#2a854e",
  "color_success_hover": "#3ba164",
  "color_theme": "#3272d9",
  "color_themePrimary": "#ffffff",
  "color_theme_10": "#f0f5fc",
  "color_theme_100": "#15233b",
  "color_theme_20": "#cfe0fc",
  "color_theme_30": "#accbfc",
  "color_theme_40": "#84b1fa",
  "color_theme_50": "#5691f0",
  "color_theme_60": "#3272d9",
  "color_theme_70": "#1d5bbf",
  "color_theme_80": "#114599",
  "color_theme_90": "#103570",
  "color_theme_active": "#1d5bbf",
  "color_theme_focus": "#3272d9",
  "color_theme_hover": "#5691f0",
  "color_warning": "#ad5f00",
  "color_warningPrimary": "#ffffff",
  "color_warning_active": "#8a4d03",
  "color_warning_focus": "#ad5f00",
  "color_warning_hover": "#cf7911",
  "color_white": "#ffffff",
  "direction": "ltr",
  "fontFamily": "\\"Open Sans\\"",
  "fontFamily_monospace": "\\"SF Mono\\", \\"Droid Sans Mono\\", \\"Source Code Pro\\", Monaco, Consolas, \\"Courier New\\", Courier, monospace",
  "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
  "fontSize_base": "16px",
  "fontSize_mouse": "0.6875em",
  "fontSize_prose": "1em",
  "fontSize_ui": "0.875em",
  "fontWeight_bold": 700,
  "fontWeight_extraBold": 800,
  "fontWeight_regular": 400,
  "fontWeight_semiBold": 600,
  "h1_color": "#333840",
  "h1_fontSize": "2.125em",
  "h1_fontWeight": 800,
  "h2_color": "#58606e",
  "h2_fontSize": "1.75em",
  "h2_fontWeight": 700,
  "h3_color": "#58606e",
  "h3_fontSize": "1.375em",
  "h3_fontWeight": 700,
  "h4_color": "#58606e",
  "h4_fontSize": "1.125em",
  "h4_fontWeight": 700,
  "h5_color": "#333840",
  "h5_fontSize": "0.875em",
  "h5_fontWeight": 700,
  "h6_color": "#58606e",
  "h6_fontSize": "0.875em",
  "h6_fontWeight": 400,
  "icon_color": "#58606e",
  "icon_color_danger": "#de1b1b",
  "icon_color_success": "#2a854e",
  "icon_color_theme": "#3272d9",
  "icon_color_warning": "#ad5f00",
  "input_backgroundColor": "#ffffff",
  "input_backgroundColor_disabled": "#ebeff5",
  "input_color_placeholder": "#8e99ab",
  "lineHeight": 1.25,
  "lineHeight_heading": 1.25,
  "lineHeight_heading_small": 1.5,
  "lineHeight_prose": 1.5,
  "panel_backgroundColor": "#ffffff",
  "panel_backgroundColor_inverted": "#434a54",
  "panel_borderColor": "#ebeff5",
  "panel_borderColor_inverted": "#434a54",
  "size_jumbo": "3.25em",
  "size_large": "2.5em",
  "size_medium": "2em",
  "size_small": "1.5em",
  "space_inline_lg": "1.5em",
  "space_inline_md": "1em",
  "space_inline_sm": "0.5em",
  "space_inline_xl": "2em",
  "space_inline_xs": "0.25em",
  "space_inline_xxl": "4em",
  "space_inline_xxs": "0.125em",
  "space_inset_lg": "1.5em",
  "space_inset_md": "1em",
  "space_inset_sm": "0.5em",
  "space_stack_lg": "1.5em",
  "space_stack_md": "1em",
  "space_stack_sm": "0.5em",
  "space_stack_xl": "2em",
  "space_stack_xs": "0.25em",
  "space_stack_xxl": "4em",
  "space_stack_xxs": "0.125em",
  "well_backgroundColor": "#ebeff5",
  "well_backgroundColor_danger": "#fad4d4",
  "well_backgroundColor_success": "#abedc5",
  "well_backgroundColor_warning": "#fad8af",
  "well_borderColor_danger": "#fa8e8e",
  "well_borderColor_success": "#57c282",
  "well_borderColor_warning": "#e89c3f",
  "zIndex_100": 100,
  "zIndex_1600": 1600,
  "zIndex_200": 200,
  "zIndex_400": 400,
  "zIndex_800": 800,
}
`;

exports[`createTheme with colors overriding with a custom ramp with defined inflection overrides ramp 1`] = `
Object {
  "backgroundColor_active": "#ebeff5",
  "backgroundColor_dangerPrimary": "#de1b1b",
  "backgroundColor_dangerPrimary_active": "#b80d0d",
  "backgroundColor_dangerPrimary_focus": "#de1b1b",
  "backgroundColor_dangerPrimary_hover": "#f55353",
  "backgroundColor_danger_active": "#fad4d4",
  "backgroundColor_danger_focus": "#faf0f0",
  "backgroundColor_danger_hover": "#faf0f0",
  "backgroundColor_disabled": "#dde3ed",
  "backgroundColor_focus": "#f5f7fa",
  "backgroundColor_hover": "#f5f7fa",
  "backgroundColor_successPrimary": "#2a854e",
  "backgroundColor_successPrimary_active": "#20693d",
  "backgroundColor_successPrimary_focus": "#2a854e",
  "backgroundColor_successPrimary_hover": "#3ba164",
  "backgroundColor_success_active": "#abedc5",
  "backgroundColor_success_focus": "#e1faeb",
  "backgroundColor_success_hover": "#e1faeb",
  "backgroundColor_themePrimary": "60",
  "backgroundColor_themePrimary_active": "70",
  "backgroundColor_themePrimary_focus": "60",
  "backgroundColor_themePrimary_hover": "50",
  "backgroundColor_theme_selected": "10",
  "backgroundColor_theme_selectedActive": "30",
  "backgroundColor_theme_selectedHover": "20",
  "backgroundColor_warningPrimary": "#ad5f00",
  "backgroundColor_warningPrimary_active": "#8a4d03",
  "backgroundColor_warningPrimary_focus": "#ad5f00",
  "backgroundColor_warningPrimary_hover": "#cf7911",
  "backgroundColor_warning_active": "#fad8af",
  "backgroundColor_warning_focus": "#fcf2e6",
  "backgroundColor_warning_hover": "#fcf2e6",
  "borderColor": "#c8d1e0",
  "borderColor_danger": "#de1b1b",
  "borderColor_danger_active": "#b80d0d",
  "borderColor_danger_focus": "#b80d0d",
  "borderColor_danger_hover": "#f55353",
  "borderColor_success": "#2a854e",
  "borderColor_success_active": "#20693d",
  "borderColor_success_focus": "#20693d",
  "borderColor_success_hover": "#3ba164",
  "borderColor_theme": "60",
  "borderColor_theme_active": "70",
  "borderColor_theme_focus": "70",
  "borderColor_theme_hover": "50",
  "borderColor_warning": "#ad5f00",
  "borderColor_warning_active": "#8a4d03",
  "borderColor_warning_focus": "#8a4d03",
  "borderColor_warning_hover": "#cf7911",
  "borderRadius_1": "0.1875em",
  "boxShadow_1": "0 1px 2px 0 rgba(0,0,0,0.2), 0 2px 4px 0 rgba(0,0,0,0.2)",
  "boxShadow_2": "0 2px 4px 0 rgba(0,0,0,0.2), 0 4px 8px 0 rgba(0,0,0,0.2)",
  "boxShadow_3": "0 4px 8px 0 rgba(0,0,0,0.2), 0 8px 16px 0 rgba(0,0,0,0.2)",
  "boxShadow_4": "0 8px 16px 0 rgba(0,0,0,0.2), 0 20px 16px -8px rgba(0,0,0,0.2)",
  "boxShadow_5": "0 16px 24px 0 rgba(0,0,0,0.2), 0 32px 24px -16px rgba(0,0,0,0.2)",
  "boxShadow_focusInner": "#ffffff",
  "breakpoint_medium": "768px",
  "breakpoint_narrow": "512px",
  "breakpoint_wide": "1024px",
  "color": "#333840",
  "color_black": "#1d1f24",
  "color_danger": "#de1b1b",
  "color_dangerPrimary": "#ffffff",
  "color_danger_active": "#b80d0d",
  "color_danger_focus": "#de1b1b",
  "color_danger_hover": "#f55353",
  "color_disabled": "#afbacc",
  "color_gray_10": "#f5f7fa",
  "color_gray_100": "#333840",
  "color_gray_20": "#ebeff5",
  "color_gray_30": "#dde3ed",
  "color_gray_40": "#c8d1e0",
  "color_gray_50": "#afbacc",
  "color_gray_60": "#8e99ab",
  "color_gray_70": "#707a8a",
  "color_gray_80": "#58606e",
  "color_gray_90": "#434a54",
  "color_inverted": "#ffffff",
  "color_mouse": "#58606e",
  "color_readOnly": "#58606e",
  "color_required": "#de1b1b",
  "color_success": "#2a854e",
  "color_successPrimary": "#ffffff",
  "color_success_active": "#20693d",
  "color_success_focus": "#2a854e",
  "color_success_hover": "#3ba164",
  "color_theme": "60",
  "color_themePrimary": "#1d1f24",
  "color_theme_10": "10",
  "color_theme_100": "100",
  "color_theme_20": "20",
  "color_theme_30": "30",
  "color_theme_40": "40",
  "color_theme_50": "50",
  "color_theme_60": "60",
  "color_theme_70": "70",
  "color_theme_80": "80",
  "color_theme_90": "90",
  "color_theme_active": "70",
  "color_theme_focus": "60",
  "color_theme_hover": "50",
  "color_warning": "#ad5f00",
  "color_warningPrimary": "#ffffff",
  "color_warning_active": "#8a4d03",
  "color_warning_focus": "#ad5f00",
  "color_warning_hover": "#cf7911",
  "color_white": "#ffffff",
  "direction": "ltr",
  "fontFamily": "\\"Open Sans\\"",
  "fontFamily_monospace": "\\"SF Mono\\", \\"Droid Sans Mono\\", \\"Source Code Pro\\", Monaco, Consolas, \\"Courier New\\", Courier, monospace",
  "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
  "fontSize_base": "16px",
  "fontSize_mouse": "0.6875em",
  "fontSize_prose": "1em",
  "fontSize_ui": "0.875em",
  "fontWeight_bold": 700,
  "fontWeight_extraBold": 800,
  "fontWeight_regular": 400,
  "fontWeight_semiBold": 600,
  "h1_color": "#333840",
  "h1_fontSize": "2.125em",
  "h1_fontWeight": 800,
  "h2_color": "#58606e",
  "h2_fontSize": "1.75em",
  "h2_fontWeight": 700,
  "h3_color": "#58606e",
  "h3_fontSize": "1.375em",
  "h3_fontWeight": 700,
  "h4_color": "#58606e",
  "h4_fontSize": "1.125em",
  "h4_fontWeight": 700,
  "h5_color": "#333840",
  "h5_fontSize": "0.875em",
  "h5_fontWeight": 700,
  "h6_color": "#58606e",
  "h6_fontSize": "0.875em",
  "h6_fontWeight": 400,
  "icon_color": "#58606e",
  "icon_color_danger": "#de1b1b",
  "icon_color_success": "#2a854e",
  "icon_color_theme": "60",
  "icon_color_warning": "#ad5f00",
  "input_backgroundColor": "#ffffff",
  "input_backgroundColor_disabled": "#ebeff5",
  "input_color_placeholder": "#8e99ab",
  "lineHeight": 1.25,
  "lineHeight_heading": 1.25,
  "lineHeight_heading_small": 1.5,
  "lineHeight_prose": 1.5,
  "panel_backgroundColor": "#ffffff",
  "panel_backgroundColor_inverted": "#434a54",
  "panel_borderColor": "#ebeff5",
  "panel_borderColor_inverted": "#434a54",
  "size_jumbo": "3.25em",
  "size_large": "2.5em",
  "size_medium": "2em",
  "size_small": "1.5em",
  "space_inline_lg": "1.5em",
  "space_inline_md": "1em",
  "space_inline_sm": "0.5em",
  "space_inline_xl": "2em",
  "space_inline_xs": "0.25em",
  "space_inline_xxl": "4em",
  "space_inline_xxs": "0.125em",
  "space_inset_lg": "1.5em",
  "space_inset_md": "1em",
  "space_inset_sm": "0.5em",
  "space_stack_lg": "1.5em",
  "space_stack_md": "1em",
  "space_stack_sm": "0.5em",
  "space_stack_xl": "2em",
  "space_stack_xs": "0.25em",
  "space_stack_xxl": "4em",
  "space_stack_xxs": "0.125em",
  "well_backgroundColor": "#ebeff5",
  "well_backgroundColor_danger": "#fad4d4",
  "well_backgroundColor_success": "#abedc5",
  "well_backgroundColor_warning": "#fad8af",
  "well_borderColor_danger": "#fa8e8e",
  "well_borderColor_success": "#57c282",
  "well_borderColor_warning": "#e89c3f",
  "zIndex_100": 100,
  "zIndex_1600": 1600,
  "zIndex_200": 200,
  "zIndex_400": 400,
  "zIndex_800": 800,
}
`;

exports[`createTheme with colors with black value overrides value 1`] = `
Object {
  "backgroundColor_active": "#ebeff5",
  "backgroundColor_dangerPrimary": "#de1b1b",
  "backgroundColor_dangerPrimary_active": "#b80d0d",
  "backgroundColor_dangerPrimary_focus": "#de1b1b",
  "backgroundColor_dangerPrimary_hover": "#f55353",
  "backgroundColor_danger_active": "#fad4d4",
  "backgroundColor_danger_focus": "#faf0f0",
  "backgroundColor_danger_hover": "#faf0f0",
  "backgroundColor_disabled": "#dde3ed",
  "backgroundColor_focus": "#f5f7fa",
  "backgroundColor_hover": "#f5f7fa",
  "backgroundColor_successPrimary": "#2a854e",
  "backgroundColor_successPrimary_active": "#20693d",
  "backgroundColor_successPrimary_focus": "#2a854e",
  "backgroundColor_successPrimary_hover": "#3ba164",
  "backgroundColor_success_active": "#abedc5",
  "backgroundColor_success_focus": "#e1faeb",
  "backgroundColor_success_hover": "#e1faeb",
  "backgroundColor_themePrimary": "#3272d9",
  "backgroundColor_themePrimary_active": "#1d5bbf",
  "backgroundColor_themePrimary_focus": "#3272d9",
  "backgroundColor_themePrimary_hover": "#5691f0",
  "backgroundColor_theme_selected": "#f0f5fc",
  "backgroundColor_theme_selectedActive": "#accbfc",
  "backgroundColor_theme_selectedHover": "#cfe0fc",
  "backgroundColor_warningPrimary": "#ad5f00",
  "backgroundColor_warningPrimary_active": "#8a4d03",
  "backgroundColor_warningPrimary_focus": "#ad5f00",
  "backgroundColor_warningPrimary_hover": "#cf7911",
  "backgroundColor_warning_active": "#fad8af",
  "backgroundColor_warning_focus": "#fcf2e6",
  "backgroundColor_warning_hover": "#fcf2e6",
  "borderColor": "#c8d1e0",
  "borderColor_danger": "#de1b1b",
  "borderColor_danger_active": "#b80d0d",
  "borderColor_danger_focus": "#b80d0d",
  "borderColor_danger_hover": "#f55353",
  "borderColor_success": "#2a854e",
  "borderColor_success_active": "#20693d",
  "borderColor_success_focus": "#20693d",
  "borderColor_success_hover": "#3ba164",
  "borderColor_theme": "#3272d9",
  "borderColor_theme_active": "#1d5bbf",
  "borderColor_theme_focus": "#1d5bbf",
  "borderColor_theme_hover": "#5691f0",
  "borderColor_warning": "#ad5f00",
  "borderColor_warning_active": "#8a4d03",
  "borderColor_warning_focus": "#8a4d03",
  "borderColor_warning_hover": "#cf7911",
  "borderRadius_1": "0.1875em",
  "boxShadow_1": "0 1px 2px 0 rgba(0,0,0,0.2), 0 2px 4px 0 rgba(0,0,0,0.2)",
  "boxShadow_2": "0 2px 4px 0 rgba(0,0,0,0.2), 0 4px 8px 0 rgba(0,0,0,0.2)",
  "boxShadow_3": "0 4px 8px 0 rgba(0,0,0,0.2), 0 8px 16px 0 rgba(0,0,0,0.2)",
  "boxShadow_4": "0 8px 16px 0 rgba(0,0,0,0.2), 0 20px 16px -8px rgba(0,0,0,0.2)",
  "boxShadow_5": "0 16px 24px 0 rgba(0,0,0,0.2), 0 32px 24px -16px rgba(0,0,0,0.2)",
  "boxShadow_focusInner": "#ffffff",
  "breakpoint_medium": "768px",
  "breakpoint_narrow": "512px",
  "breakpoint_wide": "1024px",
  "color": "#333840",
  "color_black": "custom_black",
  "color_danger": "#de1b1b",
  "color_dangerPrimary": "#ffffff",
  "color_danger_active": "#b80d0d",
  "color_danger_focus": "#de1b1b",
  "color_danger_hover": "#f55353",
  "color_disabled": "#afbacc",
  "color_gray_10": "#f5f7fa",
  "color_gray_100": "#333840",
  "color_gray_20": "#ebeff5",
  "color_gray_30": "#dde3ed",
  "color_gray_40": "#c8d1e0",
  "color_gray_50": "#afbacc",
  "color_gray_60": "#8e99ab",
  "color_gray_70": "#707a8a",
  "color_gray_80": "#58606e",
  "color_gray_90": "#434a54",
  "color_inverted": "#ffffff",
  "color_mouse": "#58606e",
  "color_readOnly": "#58606e",
  "color_required": "#de1b1b",
  "color_success": "#2a854e",
  "color_successPrimary": "#ffffff",
  "color_success_active": "#20693d",
  "color_success_focus": "#2a854e",
  "color_success_hover": "#3ba164",
  "color_theme": "#3272d9",
  "color_themePrimary": "#ffffff",
  "color_theme_10": "#f0f5fc",
  "color_theme_100": "#15233b",
  "color_theme_20": "#cfe0fc",
  "color_theme_30": "#accbfc",
  "color_theme_40": "#84b1fa",
  "color_theme_50": "#5691f0",
  "color_theme_60": "#3272d9",
  "color_theme_70": "#1d5bbf",
  "color_theme_80": "#114599",
  "color_theme_90": "#103570",
  "color_theme_active": "#1d5bbf",
  "color_theme_focus": "#3272d9",
  "color_theme_hover": "#5691f0",
  "color_warning": "#ad5f00",
  "color_warningPrimary": "#ffffff",
  "color_warning_active": "#8a4d03",
  "color_warning_focus": "#ad5f00",
  "color_warning_hover": "#cf7911",
  "color_white": "#ffffff",
  "direction": "ltr",
  "fontFamily": "\\"Open Sans\\"",
  "fontFamily_monospace": "\\"SF Mono\\", \\"Droid Sans Mono\\", \\"Source Code Pro\\", Monaco, Consolas, \\"Courier New\\", Courier, monospace",
  "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
  "fontSize_base": "16px",
  "fontSize_mouse": "0.6875em",
  "fontSize_prose": "1em",
  "fontSize_ui": "0.875em",
  "fontWeight_bold": 700,
  "fontWeight_extraBold": 800,
  "fontWeight_regular": 400,
  "fontWeight_semiBold": 600,
  "h1_color": "#333840",
  "h1_fontSize": "2.125em",
  "h1_fontWeight": 800,
  "h2_color": "#58606e",
  "h2_fontSize": "1.75em",
  "h2_fontWeight": 700,
  "h3_color": "#58606e",
  "h3_fontSize": "1.375em",
  "h3_fontWeight": 700,
  "h4_color": "#58606e",
  "h4_fontSize": "1.125em",
  "h4_fontWeight": 700,
  "h5_color": "#333840",
  "h5_fontSize": "0.875em",
  "h5_fontWeight": 700,
  "h6_color": "#58606e",
  "h6_fontSize": "0.875em",
  "h6_fontWeight": 400,
  "icon_color": "#58606e",
  "icon_color_danger": "#de1b1b",
  "icon_color_success": "#2a854e",
  "icon_color_theme": "#3272d9",
  "icon_color_warning": "#ad5f00",
  "input_backgroundColor": "#ffffff",
  "input_backgroundColor_disabled": "#ebeff5",
  "input_color_placeholder": "#8e99ab",
  "lineHeight": 1.25,
  "lineHeight_heading": 1.25,
  "lineHeight_heading_small": 1.5,
  "lineHeight_prose": 1.5,
  "panel_backgroundColor": "#ffffff",
  "panel_backgroundColor_inverted": "#434a54",
  "panel_borderColor": "#ebeff5",
  "panel_borderColor_inverted": "#434a54",
  "size_jumbo": "3.25em",
  "size_large": "2.5em",
  "size_medium": "2em",
  "size_small": "1.5em",
  "space_inline_lg": "1.5em",
  "space_inline_md": "1em",
  "space_inline_sm": "0.5em",
  "space_inline_xl": "2em",
  "space_inline_xs": "0.25em",
  "space_inline_xxl": "4em",
  "space_inline_xxs": "0.125em",
  "space_inset_lg": "1.5em",
  "space_inset_md": "1em",
  "space_inset_sm": "0.5em",
  "space_stack_lg": "1.5em",
  "space_stack_md": "1em",
  "space_stack_sm": "0.5em",
  "space_stack_xl": "2em",
  "space_stack_xs": "0.25em",
  "space_stack_xxl": "4em",
  "space_stack_xxs": "0.125em",
  "well_backgroundColor": "#ebeff5",
  "well_backgroundColor_danger": "#fad4d4",
  "well_backgroundColor_success": "#abedc5",
  "well_backgroundColor_warning": "#fad8af",
  "well_borderColor_danger": "#fa8e8e",
  "well_borderColor_success": "#57c282",
  "well_borderColor_warning": "#e89c3f",
  "zIndex_100": 100,
  "zIndex_1600": 1600,
  "zIndex_200": 200,
  "zIndex_400": 400,
  "zIndex_800": 800,
}
`;

exports[`createTheme with colors with danger as custom ramp overrides ramp 1`] = `
Object {
  "backgroundColor_active": "#ebeff5",
  "backgroundColor_dangerPrimary": "60",
  "backgroundColor_dangerPrimary_active": "70",
  "backgroundColor_dangerPrimary_focus": "60",
  "backgroundColor_dangerPrimary_hover": "50",
  "backgroundColor_danger_active": "20",
  "backgroundColor_danger_focus": "10",
  "backgroundColor_danger_hover": "10",
  "backgroundColor_disabled": "#dde3ed",
  "backgroundColor_focus": "#f5f7fa",
  "backgroundColor_hover": "#f5f7fa",
  "backgroundColor_successPrimary": "#2a854e",
  "backgroundColor_successPrimary_active": "#20693d",
  "backgroundColor_successPrimary_focus": "#2a854e",
  "backgroundColor_successPrimary_hover": "#3ba164",
  "backgroundColor_success_active": "#abedc5",
  "backgroundColor_success_focus": "#e1faeb",
  "backgroundColor_success_hover": "#e1faeb",
  "backgroundColor_themePrimary": "#3272d9",
  "backgroundColor_themePrimary_active": "#1d5bbf",
  "backgroundColor_themePrimary_focus": "#3272d9",
  "backgroundColor_themePrimary_hover": "#5691f0",
  "backgroundColor_theme_selected": "#f0f5fc",
  "backgroundColor_theme_selectedActive": "#accbfc",
  "backgroundColor_theme_selectedHover": "#cfe0fc",
  "backgroundColor_warningPrimary": "#ad5f00",
  "backgroundColor_warningPrimary_active": "#8a4d03",
  "backgroundColor_warningPrimary_focus": "#ad5f00",
  "backgroundColor_warningPrimary_hover": "#cf7911",
  "backgroundColor_warning_active": "#fad8af",
  "backgroundColor_warning_focus": "#fcf2e6",
  "backgroundColor_warning_hover": "#fcf2e6",
  "borderColor": "#c8d1e0",
  "borderColor_danger": "60",
  "borderColor_danger_active": "70",
  "borderColor_danger_focus": "70",
  "borderColor_danger_hover": "50",
  "borderColor_success": "#2a854e",
  "borderColor_success_active": "#20693d",
  "borderColor_success_focus": "#20693d",
  "borderColor_success_hover": "#3ba164",
  "borderColor_theme": "#3272d9",
  "borderColor_theme_active": "#1d5bbf",
  "borderColor_theme_focus": "#1d5bbf",
  "borderColor_theme_hover": "#5691f0",
  "borderColor_warning": "#ad5f00",
  "borderColor_warning_active": "#8a4d03",
  "borderColor_warning_focus": "#8a4d03",
  "borderColor_warning_hover": "#cf7911",
  "borderRadius_1": "0.1875em",
  "boxShadow_1": "0 1px 2px 0 rgba(0,0,0,0.2), 0 2px 4px 0 rgba(0,0,0,0.2)",
  "boxShadow_2": "0 2px 4px 0 rgba(0,0,0,0.2), 0 4px 8px 0 rgba(0,0,0,0.2)",
  "boxShadow_3": "0 4px 8px 0 rgba(0,0,0,0.2), 0 8px 16px 0 rgba(0,0,0,0.2)",
  "boxShadow_4": "0 8px 16px 0 rgba(0,0,0,0.2), 0 20px 16px -8px rgba(0,0,0,0.2)",
  "boxShadow_5": "0 16px 24px 0 rgba(0,0,0,0.2), 0 32px 24px -16px rgba(0,0,0,0.2)",
  "boxShadow_focusInner": "#ffffff",
  "breakpoint_medium": "768px",
  "breakpoint_narrow": "512px",
  "breakpoint_wide": "1024px",
  "color": "#333840",
  "color_black": "#1d1f24",
  "color_danger": "60",
  "color_dangerPrimary": "#ffffff",
  "color_danger_active": "70",
  "color_danger_focus": "60",
  "color_danger_hover": "50",
  "color_disabled": "#afbacc",
  "color_gray_10": "#f5f7fa",
  "color_gray_100": "#333840",
  "color_gray_20": "#ebeff5",
  "color_gray_30": "#dde3ed",
  "color_gray_40": "#c8d1e0",
  "color_gray_50": "#afbacc",
  "color_gray_60": "#8e99ab",
  "color_gray_70": "#707a8a",
  "color_gray_80": "#58606e",
  "color_gray_90": "#434a54",
  "color_inverted": "#ffffff",
  "color_mouse": "#58606e",
  "color_readOnly": "#58606e",
  "color_required": "#de1b1b",
  "color_success": "#2a854e",
  "color_successPrimary": "#ffffff",
  "color_success_active": "#20693d",
  "color_success_focus": "#2a854e",
  "color_success_hover": "#3ba164",
  "color_theme": "#3272d9",
  "color_themePrimary": "#ffffff",
  "color_theme_10": "#f0f5fc",
  "color_theme_100": "#15233b",
  "color_theme_20": "#cfe0fc",
  "color_theme_30": "#accbfc",
  "color_theme_40": "#84b1fa",
  "color_theme_50": "#5691f0",
  "color_theme_60": "#3272d9",
  "color_theme_70": "#1d5bbf",
  "color_theme_80": "#114599",
  "color_theme_90": "#103570",
  "color_theme_active": "#1d5bbf",
  "color_theme_focus": "#3272d9",
  "color_theme_hover": "#5691f0",
  "color_warning": "#ad5f00",
  "color_warningPrimary": "#ffffff",
  "color_warning_active": "#8a4d03",
  "color_warning_focus": "#ad5f00",
  "color_warning_hover": "#cf7911",
  "color_white": "#ffffff",
  "direction": "ltr",
  "fontFamily": "\\"Open Sans\\"",
  "fontFamily_monospace": "\\"SF Mono\\", \\"Droid Sans Mono\\", \\"Source Code Pro\\", Monaco, Consolas, \\"Courier New\\", Courier, monospace",
  "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
  "fontSize_base": "16px",
  "fontSize_mouse": "0.6875em",
  "fontSize_prose": "1em",
  "fontSize_ui": "0.875em",
  "fontWeight_bold": 700,
  "fontWeight_extraBold": 800,
  "fontWeight_regular": 400,
  "fontWeight_semiBold": 600,
  "h1_color": "#333840",
  "h1_fontSize": "2.125em",
  "h1_fontWeight": 800,
  "h2_color": "#58606e",
  "h2_fontSize": "1.75em",
  "h2_fontWeight": 700,
  "h3_color": "#58606e",
  "h3_fontSize": "1.375em",
  "h3_fontWeight": 700,
  "h4_color": "#58606e",
  "h4_fontSize": "1.125em",
  "h4_fontWeight": 700,
  "h5_color": "#333840",
  "h5_fontSize": "0.875em",
  "h5_fontWeight": 700,
  "h6_color": "#58606e",
  "h6_fontSize": "0.875em",
  "h6_fontWeight": 400,
  "icon_color": "#58606e",
  "icon_color_danger": "60",
  "icon_color_success": "#2a854e",
  "icon_color_theme": "#3272d9",
  "icon_color_warning": "#ad5f00",
  "input_backgroundColor": "#ffffff",
  "input_backgroundColor_disabled": "#ebeff5",
  "input_color_placeholder": "#8e99ab",
  "lineHeight": 1.25,
  "lineHeight_heading": 1.25,
  "lineHeight_heading_small": 1.5,
  "lineHeight_prose": 1.5,
  "panel_backgroundColor": "#ffffff",
  "panel_backgroundColor_inverted": "#434a54",
  "panel_borderColor": "#ebeff5",
  "panel_borderColor_inverted": "#434a54",
  "size_jumbo": "3.25em",
  "size_large": "2.5em",
  "size_medium": "2em",
  "size_small": "1.5em",
  "space_inline_lg": "1.5em",
  "space_inline_md": "1em",
  "space_inline_sm": "0.5em",
  "space_inline_xl": "2em",
  "space_inline_xs": "0.25em",
  "space_inline_xxl": "4em",
  "space_inline_xxs": "0.125em",
  "space_inset_lg": "1.5em",
  "space_inset_md": "1em",
  "space_inset_sm": "0.5em",
  "space_stack_lg": "1.5em",
  "space_stack_md": "1em",
  "space_stack_sm": "0.5em",
  "space_stack_xl": "2em",
  "space_stack_xs": "0.25em",
  "space_stack_xxl": "4em",
  "space_stack_xxs": "0.125em",
  "well_backgroundColor": "#ebeff5",
  "well_backgroundColor_danger": "20",
  "well_backgroundColor_success": "#abedc5",
  "well_backgroundColor_warning": "#fad8af",
  "well_borderColor_danger": "40",
  "well_borderColor_success": "#57c282",
  "well_borderColor_warning": "#e89c3f",
  "zIndex_100": 100,
  "zIndex_1600": 1600,
  "zIndex_200": 200,
  "zIndex_400": 400,
  "zIndex_800": 800,
}
`;

exports[`createTheme with colors with danger as palette ramp name overrides ramp 1`] = `
Object {
  "backgroundColor_active": "#ebeff5",
  "backgroundColor_dangerPrimary": "#17827b",
  "backgroundColor_dangerPrimary_active": "#116963",
  "backgroundColor_dangerPrimary_focus": "#17827b",
  "backgroundColor_dangerPrimary_hover": "#28a199",
  "backgroundColor_danger_active": "#a8ede9",
  "backgroundColor_danger_focus": "#e4f7f6",
  "backgroundColor_danger_hover": "#e4f7f6",
  "backgroundColor_disabled": "#dde3ed",
  "backgroundColor_focus": "#f5f7fa",
  "backgroundColor_hover": "#f5f7fa",
  "backgroundColor_successPrimary": "#2a854e",
  "backgroundColor_successPrimary_active": "#20693d",
  "backgroundColor_successPrimary_focus": "#2a854e",
  "backgroundColor_successPrimary_hover": "#3ba164",
  "backgroundColor_success_active": "#abedc5",
  "backgroundColor_success_focus": "#e1faeb",
  "backgroundColor_success_hover": "#e1faeb",
  "backgroundColor_themePrimary": "#3272d9",
  "backgroundColor_themePrimary_active": "#1d5bbf",
  "backgroundColor_themePrimary_focus": "#3272d9",
  "backgroundColor_themePrimary_hover": "#5691f0",
  "backgroundColor_theme_selected": "#f0f5fc",
  "backgroundColor_theme_selectedActive": "#accbfc",
  "backgroundColor_theme_selectedHover": "#cfe0fc",
  "backgroundColor_warningPrimary": "#ad5f00",
  "backgroundColor_warningPrimary_active": "#8a4d03",
  "backgroundColor_warningPrimary_focus": "#ad5f00",
  "backgroundColor_warningPrimary_hover": "#cf7911",
  "backgroundColor_warning_active": "#fad8af",
  "backgroundColor_warning_focus": "#fcf2e6",
  "backgroundColor_warning_hover": "#fcf2e6",
  "borderColor": "#c8d1e0",
  "borderColor_danger": "#17827b",
  "borderColor_danger_active": "#116963",
  "borderColor_danger_focus": "#116963",
  "borderColor_danger_hover": "#28a199",
  "borderColor_success": "#2a854e",
  "borderColor_success_active": "#20693d",
  "borderColor_success_focus": "#20693d",
  "borderColor_success_hover": "#3ba164",
  "borderColor_theme": "#3272d9",
  "borderColor_theme_active": "#1d5bbf",
  "borderColor_theme_focus": "#1d5bbf",
  "borderColor_theme_hover": "#5691f0",
  "borderColor_warning": "#ad5f00",
  "borderColor_warning_active": "#8a4d03",
  "borderColor_warning_focus": "#8a4d03",
  "borderColor_warning_hover": "#cf7911",
  "borderRadius_1": "0.1875em",
  "boxShadow_1": "0 1px 2px 0 rgba(0,0,0,0.2), 0 2px 4px 0 rgba(0,0,0,0.2)",
  "boxShadow_2": "0 2px 4px 0 rgba(0,0,0,0.2), 0 4px 8px 0 rgba(0,0,0,0.2)",
  "boxShadow_3": "0 4px 8px 0 rgba(0,0,0,0.2), 0 8px 16px 0 rgba(0,0,0,0.2)",
  "boxShadow_4": "0 8px 16px 0 rgba(0,0,0,0.2), 0 20px 16px -8px rgba(0,0,0,0.2)",
  "boxShadow_5": "0 16px 24px 0 rgba(0,0,0,0.2), 0 32px 24px -16px rgba(0,0,0,0.2)",
  "boxShadow_focusInner": "#ffffff",
  "breakpoint_medium": "768px",
  "breakpoint_narrow": "512px",
  "breakpoint_wide": "1024px",
  "color": "#333840",
  "color_black": "#1d1f24",
  "color_danger": "#17827b",
  "color_dangerPrimary": "#ffffff",
  "color_danger_active": "#116963",
  "color_danger_focus": "#17827b",
  "color_danger_hover": "#28a199",
  "color_disabled": "#afbacc",
  "color_gray_10": "#f5f7fa",
  "color_gray_100": "#333840",
  "color_gray_20": "#ebeff5",
  "color_gray_30": "#dde3ed",
  "color_gray_40": "#c8d1e0",
  "color_gray_50": "#afbacc",
  "color_gray_60": "#8e99ab",
  "color_gray_70": "#707a8a",
  "color_gray_80": "#58606e",
  "color_gray_90": "#434a54",
  "color_inverted": "#ffffff",
  "color_mouse": "#58606e",
  "color_readOnly": "#58606e",
  "color_required": "#de1b1b",
  "color_success": "#2a854e",
  "color_successPrimary": "#ffffff",
  "color_success_active": "#20693d",
  "color_success_focus": "#2a854e",
  "color_success_hover": "#3ba164",
  "color_theme": "#3272d9",
  "color_themePrimary": "#ffffff",
  "color_theme_10": "#f0f5fc",
  "color_theme_100": "#15233b",
  "color_theme_20": "#cfe0fc",
  "color_theme_30": "#accbfc",
  "color_theme_40": "#84b1fa",
  "color_theme_50": "#5691f0",
  "color_theme_60": "#3272d9",
  "color_theme_70": "#1d5bbf",
  "color_theme_80": "#114599",
  "color_theme_90": "#103570",
  "color_theme_active": "#1d5bbf",
  "color_theme_focus": "#3272d9",
  "color_theme_hover": "#5691f0",
  "color_warning": "#ad5f00",
  "color_warningPrimary": "#ffffff",
  "color_warning_active": "#8a4d03",
  "color_warning_focus": "#ad5f00",
  "color_warning_hover": "#cf7911",
  "color_white": "#ffffff",
  "direction": "ltr",
  "fontFamily": "\\"Open Sans\\"",
  "fontFamily_monospace": "\\"SF Mono\\", \\"Droid Sans Mono\\", \\"Source Code Pro\\", Monaco, Consolas, \\"Courier New\\", Courier, monospace",
  "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
  "fontSize_base": "16px",
  "fontSize_mouse": "0.6875em",
  "fontSize_prose": "1em",
  "fontSize_ui": "0.875em",
  "fontWeight_bold": 700,
  "fontWeight_extraBold": 800,
  "fontWeight_regular": 400,
  "fontWeight_semiBold": 600,
  "h1_color": "#333840",
  "h1_fontSize": "2.125em",
  "h1_fontWeight": 800,
  "h2_color": "#58606e",
  "h2_fontSize": "1.75em",
  "h2_fontWeight": 700,
  "h3_color": "#58606e",
  "h3_fontSize": "1.375em",
  "h3_fontWeight": 700,
  "h4_color": "#58606e",
  "h4_fontSize": "1.125em",
  "h4_fontWeight": 700,
  "h5_color": "#333840",
  "h5_fontSize": "0.875em",
  "h5_fontWeight": 700,
  "h6_color": "#58606e",
  "h6_fontSize": "0.875em",
  "h6_fontWeight": 400,
  "icon_color": "#58606e",
  "icon_color_danger": "#17827b",
  "icon_color_success": "#2a854e",
  "icon_color_theme": "#3272d9",
  "icon_color_warning": "#ad5f00",
  "input_backgroundColor": "#ffffff",
  "input_backgroundColor_disabled": "#ebeff5",
  "input_color_placeholder": "#8e99ab",
  "lineHeight": 1.25,
  "lineHeight_heading": 1.25,
  "lineHeight_heading_small": 1.5,
  "lineHeight_prose": 1.5,
  "panel_backgroundColor": "#ffffff",
  "panel_backgroundColor_inverted": "#434a54",
  "panel_borderColor": "#ebeff5",
  "panel_borderColor_inverted": "#434a54",
  "size_jumbo": "3.25em",
  "size_large": "2.5em",
  "size_medium": "2em",
  "size_small": "1.5em",
  "space_inline_lg": "1.5em",
  "space_inline_md": "1em",
  "space_inline_sm": "0.5em",
  "space_inline_xl": "2em",
  "space_inline_xs": "0.25em",
  "space_inline_xxl": "4em",
  "space_inline_xxs": "0.125em",
  "space_inset_lg": "1.5em",
  "space_inset_md": "1em",
  "space_inset_sm": "0.5em",
  "space_stack_lg": "1.5em",
  "space_stack_md": "1em",
  "space_stack_sm": "0.5em",
  "space_stack_xl": "2em",
  "space_stack_xs": "0.25em",
  "space_stack_xxl": "4em",
  "space_stack_xxs": "0.125em",
  "well_backgroundColor": "#ebeff5",
  "well_backgroundColor_danger": "#a8ede9",
  "well_backgroundColor_success": "#abedc5",
  "well_backgroundColor_warning": "#fad8af",
  "well_borderColor_danger": "#45bfb7",
  "well_borderColor_success": "#57c282",
  "well_borderColor_warning": "#e89c3f",
  "zIndex_100": 100,
  "zIndex_1600": 1600,
  "zIndex_200": 200,
  "zIndex_400": 400,
  "zIndex_800": 800,
}
`;

exports[`createTheme with colors with gray ramp overrides ramp 1`] = `
Object {
  "backgroundColor_active": "20",
  "backgroundColor_dangerPrimary": "#de1b1b",
  "backgroundColor_dangerPrimary_active": "#b80d0d",
  "backgroundColor_dangerPrimary_focus": "#de1b1b",
  "backgroundColor_dangerPrimary_hover": "#f55353",
  "backgroundColor_danger_active": "#fad4d4",
  "backgroundColor_danger_focus": "#faf0f0",
  "backgroundColor_danger_hover": "#faf0f0",
  "backgroundColor_disabled": "30",
  "backgroundColor_focus": "10",
  "backgroundColor_hover": "10",
  "backgroundColor_successPrimary": "#2a854e",
  "backgroundColor_successPrimary_active": "#20693d",
  "backgroundColor_successPrimary_focus": "#2a854e",
  "backgroundColor_successPrimary_hover": "#3ba164",
  "backgroundColor_success_active": "#abedc5",
  "backgroundColor_success_focus": "#e1faeb",
  "backgroundColor_success_hover": "#e1faeb",
  "backgroundColor_themePrimary": "#3272d9",
  "backgroundColor_themePrimary_active": "#1d5bbf",
  "backgroundColor_themePrimary_focus": "#3272d9",
  "backgroundColor_themePrimary_hover": "#5691f0",
  "backgroundColor_theme_selected": "#f0f5fc",
  "backgroundColor_theme_selectedActive": "#accbfc",
  "backgroundColor_theme_selectedHover": "#cfe0fc",
  "backgroundColor_warningPrimary": "#ad5f00",
  "backgroundColor_warningPrimary_active": "#8a4d03",
  "backgroundColor_warningPrimary_focus": "#ad5f00",
  "backgroundColor_warningPrimary_hover": "#cf7911",
  "backgroundColor_warning_active": "#fad8af",
  "backgroundColor_warning_focus": "#fcf2e6",
  "backgroundColor_warning_hover": "#fcf2e6",
  "borderColor": "40",
  "borderColor_danger": "#de1b1b",
  "borderColor_danger_active": "#b80d0d",
  "borderColor_danger_focus": "#b80d0d",
  "borderColor_danger_hover": "#f55353",
  "borderColor_success": "#2a854e",
  "borderColor_success_active": "#20693d",
  "borderColor_success_focus": "#20693d",
  "borderColor_success_hover": "#3ba164",
  "borderColor_theme": "#3272d9",
  "borderColor_theme_active": "#1d5bbf",
  "borderColor_theme_focus": "#1d5bbf",
  "borderColor_theme_hover": "#5691f0",
  "borderColor_warning": "#ad5f00",
  "borderColor_warning_active": "#8a4d03",
  "borderColor_warning_focus": "#8a4d03",
  "borderColor_warning_hover": "#cf7911",
  "borderRadius_1": "0.1875em",
  "boxShadow_1": "0 1px 2px 0 rgba(0,0,0,0.2), 0 2px 4px 0 rgba(0,0,0,0.2)",
  "boxShadow_2": "0 2px 4px 0 rgba(0,0,0,0.2), 0 4px 8px 0 rgba(0,0,0,0.2)",
  "boxShadow_3": "0 4px 8px 0 rgba(0,0,0,0.2), 0 8px 16px 0 rgba(0,0,0,0.2)",
  "boxShadow_4": "0 8px 16px 0 rgba(0,0,0,0.2), 0 20px 16px -8px rgba(0,0,0,0.2)",
  "boxShadow_5": "0 16px 24px 0 rgba(0,0,0,0.2), 0 32px 24px -16px rgba(0,0,0,0.2)",
  "boxShadow_focusInner": "#ffffff",
  "breakpoint_medium": "768px",
  "breakpoint_narrow": "512px",
  "breakpoint_wide": "1024px",
  "color": "100",
  "color_black": "#1d1f24",
  "color_danger": "#de1b1b",
  "color_dangerPrimary": "#ffffff",
  "color_danger_active": "#b80d0d",
  "color_danger_focus": "#de1b1b",
  "color_danger_hover": "#f55353",
  "color_disabled": "50",
  "color_gray_10": "10",
  "color_gray_100": "100",
  "color_gray_20": "20",
  "color_gray_30": "30",
  "color_gray_40": "40",
  "color_gray_50": "50",
  "color_gray_60": "60",
  "color_gray_70": "70",
  "color_gray_80": "80",
  "color_gray_90": "90",
  "color_inverted": "#ffffff",
  "color_mouse": "80",
  "color_readOnly": "80",
  "color_required": "#de1b1b",
  "color_success": "#2a854e",
  "color_successPrimary": "#ffffff",
  "color_success_active": "#20693d",
  "color_success_focus": "#2a854e",
  "color_success_hover": "#3ba164",
  "color_theme": "#3272d9",
  "color_themePrimary": "#ffffff",
  "color_theme_10": "#f0f5fc",
  "color_theme_100": "#15233b",
  "color_theme_20": "#cfe0fc",
  "color_theme_30": "#accbfc",
  "color_theme_40": "#84b1fa",
  "color_theme_50": "#5691f0",
  "color_theme_60": "#3272d9",
  "color_theme_70": "#1d5bbf",
  "color_theme_80": "#114599",
  "color_theme_90": "#103570",
  "color_theme_active": "#1d5bbf",
  "color_theme_focus": "#3272d9",
  "color_theme_hover": "#5691f0",
  "color_warning": "#ad5f00",
  "color_warningPrimary": "#ffffff",
  "color_warning_active": "#8a4d03",
  "color_warning_focus": "#ad5f00",
  "color_warning_hover": "#cf7911",
  "color_white": "#ffffff",
  "direction": "ltr",
  "fontFamily": "\\"Open Sans\\"",
  "fontFamily_monospace": "\\"SF Mono\\", \\"Droid Sans Mono\\", \\"Source Code Pro\\", Monaco, Consolas, \\"Courier New\\", Courier, monospace",
  "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
  "fontSize_base": "16px",
  "fontSize_mouse": "0.6875em",
  "fontSize_prose": "1em",
  "fontSize_ui": "0.875em",
  "fontWeight_bold": 700,
  "fontWeight_extraBold": 800,
  "fontWeight_regular": 400,
  "fontWeight_semiBold": 600,
  "h1_color": "100",
  "h1_fontSize": "2.125em",
  "h1_fontWeight": 800,
  "h2_color": "80",
  "h2_fontSize": "1.75em",
  "h2_fontWeight": 700,
  "h3_color": "80",
  "h3_fontSize": "1.375em",
  "h3_fontWeight": 700,
  "h4_color": "80",
  "h4_fontSize": "1.125em",
  "h4_fontWeight": 700,
  "h5_color": "100",
  "h5_fontSize": "0.875em",
  "h5_fontWeight": 700,
  "h6_color": "80",
  "h6_fontSize": "0.875em",
  "h6_fontWeight": 400,
  "icon_color": "80",
  "icon_color_danger": "#de1b1b",
  "icon_color_success": "#2a854e",
  "icon_color_theme": "#3272d9",
  "icon_color_warning": "#ad5f00",
  "input_backgroundColor": "#ffffff",
  "input_backgroundColor_disabled": "20",
  "input_color_placeholder": "60",
  "lineHeight": 1.25,
  "lineHeight_heading": 1.25,
  "lineHeight_heading_small": 1.5,
  "lineHeight_prose": 1.5,
  "panel_backgroundColor": "#ffffff",
  "panel_backgroundColor_inverted": "90",
  "panel_borderColor": "20",
  "panel_borderColor_inverted": "90",
  "size_jumbo": "3.25em",
  "size_large": "2.5em",
  "size_medium": "2em",
  "size_small": "1.5em",
  "space_inline_lg": "1.5em",
  "space_inline_md": "1em",
  "space_inline_sm": "0.5em",
  "space_inline_xl": "2em",
  "space_inline_xs": "0.25em",
  "space_inline_xxl": "4em",
  "space_inline_xxs": "0.125em",
  "space_inset_lg": "1.5em",
  "space_inset_md": "1em",
  "space_inset_sm": "0.5em",
  "space_stack_lg": "1.5em",
  "space_stack_md": "1em",
  "space_stack_sm": "0.5em",
  "space_stack_xl": "2em",
  "space_stack_xs": "0.25em",
  "space_stack_xxl": "4em",
  "space_stack_xxs": "0.125em",
  "well_backgroundColor": "20",
  "well_backgroundColor_danger": "#fad4d4",
  "well_backgroundColor_success": "#abedc5",
  "well_backgroundColor_warning": "#fad8af",
  "well_borderColor_danger": "#fa8e8e",
  "well_borderColor_success": "#57c282",
  "well_borderColor_warning": "#e89c3f",
  "zIndex_100": 100,
  "zIndex_1600": 1600,
  "zIndex_200": 200,
  "zIndex_400": 400,
  "zIndex_800": 800,
}
`;

exports[`createTheme with colors with theme as custom ramp overrides ramp 1`] = `
Object {
  "backgroundColor_active": "#ebeff5",
  "backgroundColor_dangerPrimary": "#de1b1b",
  "backgroundColor_dangerPrimary_active": "#b80d0d",
  "backgroundColor_dangerPrimary_focus": "#de1b1b",
  "backgroundColor_dangerPrimary_hover": "#f55353",
  "backgroundColor_danger_active": "#fad4d4",
  "backgroundColor_danger_focus": "#faf0f0",
  "backgroundColor_danger_hover": "#faf0f0",
  "backgroundColor_disabled": "#dde3ed",
  "backgroundColor_focus": "#f5f7fa",
  "backgroundColor_hover": "#f5f7fa",
  "backgroundColor_successPrimary": "#2a854e",
  "backgroundColor_successPrimary_active": "#20693d",
  "backgroundColor_successPrimary_focus": "#2a854e",
  "backgroundColor_successPrimary_hover": "#3ba164",
  "backgroundColor_success_active": "#abedc5",
  "backgroundColor_success_focus": "#e1faeb",
  "backgroundColor_success_hover": "#e1faeb",
  "backgroundColor_themePrimary": "60",
  "backgroundColor_themePrimary_active": "70",
  "backgroundColor_themePrimary_focus": "60",
  "backgroundColor_themePrimary_hover": "50",
  "backgroundColor_theme_selected": "10",
  "backgroundColor_theme_selectedActive": "30",
  "backgroundColor_theme_selectedHover": "20",
  "backgroundColor_warningPrimary": "#ad5f00",
  "backgroundColor_warningPrimary_active": "#8a4d03",
  "backgroundColor_warningPrimary_focus": "#ad5f00",
  "backgroundColor_warningPrimary_hover": "#cf7911",
  "backgroundColor_warning_active": "#fad8af",
  "backgroundColor_warning_focus": "#fcf2e6",
  "backgroundColor_warning_hover": "#fcf2e6",
  "borderColor": "#c8d1e0",
  "borderColor_danger": "#de1b1b",
  "borderColor_danger_active": "#b80d0d",
  "borderColor_danger_focus": "#b80d0d",
  "borderColor_danger_hover": "#f55353",
  "borderColor_success": "#2a854e",
  "borderColor_success_active": "#20693d",
  "borderColor_success_focus": "#20693d",
  "borderColor_success_hover": "#3ba164",
  "borderColor_theme": "60",
  "borderColor_theme_active": "70",
  "borderColor_theme_focus": "70",
  "borderColor_theme_hover": "50",
  "borderColor_warning": "#ad5f00",
  "borderColor_warning_active": "#8a4d03",
  "borderColor_warning_focus": "#8a4d03",
  "borderColor_warning_hover": "#cf7911",
  "borderRadius_1": "0.1875em",
  "boxShadow_1": "0 1px 2px 0 rgba(0,0,0,0.2), 0 2px 4px 0 rgba(0,0,0,0.2)",
  "boxShadow_2": "0 2px 4px 0 rgba(0,0,0,0.2), 0 4px 8px 0 rgba(0,0,0,0.2)",
  "boxShadow_3": "0 4px 8px 0 rgba(0,0,0,0.2), 0 8px 16px 0 rgba(0,0,0,0.2)",
  "boxShadow_4": "0 8px 16px 0 rgba(0,0,0,0.2), 0 20px 16px -8px rgba(0,0,0,0.2)",
  "boxShadow_5": "0 16px 24px 0 rgba(0,0,0,0.2), 0 32px 24px -16px rgba(0,0,0,0.2)",
  "boxShadow_focusInner": "#ffffff",
  "breakpoint_medium": "768px",
  "breakpoint_narrow": "512px",
  "breakpoint_wide": "1024px",
  "color": "#333840",
  "color_black": "#1d1f24",
  "color_danger": "#de1b1b",
  "color_dangerPrimary": "#ffffff",
  "color_danger_active": "#b80d0d",
  "color_danger_focus": "#de1b1b",
  "color_danger_hover": "#f55353",
  "color_disabled": "#afbacc",
  "color_gray_10": "#f5f7fa",
  "color_gray_100": "#333840",
  "color_gray_20": "#ebeff5",
  "color_gray_30": "#dde3ed",
  "color_gray_40": "#c8d1e0",
  "color_gray_50": "#afbacc",
  "color_gray_60": "#8e99ab",
  "color_gray_70": "#707a8a",
  "color_gray_80": "#58606e",
  "color_gray_90": "#434a54",
  "color_inverted": "#ffffff",
  "color_mouse": "#58606e",
  "color_readOnly": "#58606e",
  "color_required": "#de1b1b",
  "color_success": "#2a854e",
  "color_successPrimary": "#ffffff",
  "color_success_active": "#20693d",
  "color_success_focus": "#2a854e",
  "color_success_hover": "#3ba164",
  "color_theme": "60",
  "color_themePrimary": "#ffffff",
  "color_theme_10": "10",
  "color_theme_100": "100",
  "color_theme_20": "20",
  "color_theme_30": "30",
  "color_theme_40": "40",
  "color_theme_50": "50",
  "color_theme_60": "60",
  "color_theme_70": "70",
  "color_theme_80": "80",
  "color_theme_90": "90",
  "color_theme_active": "70",
  "color_theme_focus": "60",
  "color_theme_hover": "50",
  "color_warning": "#ad5f00",
  "color_warningPrimary": "#ffffff",
  "color_warning_active": "#8a4d03",
  "color_warning_focus": "#ad5f00",
  "color_warning_hover": "#cf7911",
  "color_white": "#ffffff",
  "direction": "ltr",
  "fontFamily": "\\"Open Sans\\"",
  "fontFamily_monospace": "\\"SF Mono\\", \\"Droid Sans Mono\\", \\"Source Code Pro\\", Monaco, Consolas, \\"Courier New\\", Courier, monospace",
  "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
  "fontSize_base": "16px",
  "fontSize_mouse": "0.6875em",
  "fontSize_prose": "1em",
  "fontSize_ui": "0.875em",
  "fontWeight_bold": 700,
  "fontWeight_extraBold": 800,
  "fontWeight_regular": 400,
  "fontWeight_semiBold": 600,
  "h1_color": "#333840",
  "h1_fontSize": "2.125em",
  "h1_fontWeight": 800,
  "h2_color": "#58606e",
  "h2_fontSize": "1.75em",
  "h2_fontWeight": 700,
  "h3_color": "#58606e",
  "h3_fontSize": "1.375em",
  "h3_fontWeight": 700,
  "h4_color": "#58606e",
  "h4_fontSize": "1.125em",
  "h4_fontWeight": 700,
  "h5_color": "#333840",
  "h5_fontSize": "0.875em",
  "h5_fontWeight": 700,
  "h6_color": "#58606e",
  "h6_fontSize": "0.875em",
  "h6_fontWeight": 400,
  "icon_color": "#58606e",
  "icon_color_danger": "#de1b1b",
  "icon_color_success": "#2a854e",
  "icon_color_theme": "60",
  "icon_color_warning": "#ad5f00",
  "input_backgroundColor": "#ffffff",
  "input_backgroundColor_disabled": "#ebeff5",
  "input_color_placeholder": "#8e99ab",
  "lineHeight": 1.25,
  "lineHeight_heading": 1.25,
  "lineHeight_heading_small": 1.5,
  "lineHeight_prose": 1.5,
  "panel_backgroundColor": "#ffffff",
  "panel_backgroundColor_inverted": "#434a54",
  "panel_borderColor": "#ebeff5",
  "panel_borderColor_inverted": "#434a54",
  "size_jumbo": "3.25em",
  "size_large": "2.5em",
  "size_medium": "2em",
  "size_small": "1.5em",
  "space_inline_lg": "1.5em",
  "space_inline_md": "1em",
  "space_inline_sm": "0.5em",
  "space_inline_xl": "2em",
  "space_inline_xs": "0.25em",
  "space_inline_xxl": "4em",
  "space_inline_xxs": "0.125em",
  "space_inset_lg": "1.5em",
  "space_inset_md": "1em",
  "space_inset_sm": "0.5em",
  "space_stack_lg": "1.5em",
  "space_stack_md": "1em",
  "space_stack_sm": "0.5em",
  "space_stack_xl": "2em",
  "space_stack_xs": "0.25em",
  "space_stack_xxl": "4em",
  "space_stack_xxs": "0.125em",
  "well_backgroundColor": "#ebeff5",
  "well_backgroundColor_danger": "#fad4d4",
  "well_backgroundColor_success": "#abedc5",
  "well_backgroundColor_warning": "#fad8af",
  "well_borderColor_danger": "#fa8e8e",
  "well_borderColor_success": "#57c282",
  "well_borderColor_warning": "#e89c3f",
  "zIndex_100": 100,
  "zIndex_1600": 1600,
  "zIndex_200": 200,
  "zIndex_400": 400,
  "zIndex_800": 800,
}
`;

exports[`createTheme with colors with theme as palette ramp name overrides ramp 1`] = `
Object {
  "backgroundColor_active": "#ebeff5",
  "backgroundColor_dangerPrimary": "#de1b1b",
  "backgroundColor_dangerPrimary_active": "#b80d0d",
  "backgroundColor_dangerPrimary_focus": "#de1b1b",
  "backgroundColor_dangerPrimary_hover": "#f55353",
  "backgroundColor_danger_active": "#fad4d4",
  "backgroundColor_danger_focus": "#faf0f0",
  "backgroundColor_danger_hover": "#faf0f0",
  "backgroundColor_disabled": "#dde3ed",
  "backgroundColor_focus": "#f5f7fa",
  "backgroundColor_hover": "#f5f7fa",
  "backgroundColor_successPrimary": "#2a854e",
  "backgroundColor_successPrimary_active": "#20693d",
  "backgroundColor_successPrimary_focus": "#2a854e",
  "backgroundColor_successPrimary_hover": "#3ba164",
  "backgroundColor_success_active": "#abedc5",
  "backgroundColor_success_focus": "#e1faeb",
  "backgroundColor_success_hover": "#e1faeb",
  "backgroundColor_themePrimary": "#17827b",
  "backgroundColor_themePrimary_active": "#116963",
  "backgroundColor_themePrimary_focus": "#17827b",
  "backgroundColor_themePrimary_hover": "#28a199",
  "backgroundColor_theme_selected": "#e4f7f6",
  "backgroundColor_theme_selectedActive": "#6cd9d2",
  "backgroundColor_theme_selectedHover": "#a8ede9",
  "backgroundColor_warningPrimary": "#ad5f00",
  "backgroundColor_warningPrimary_active": "#8a4d03",
  "backgroundColor_warningPrimary_focus": "#ad5f00",
  "backgroundColor_warningPrimary_hover": "#cf7911",
  "backgroundColor_warning_active": "#fad8af",
  "backgroundColor_warning_focus": "#fcf2e6",
  "backgroundColor_warning_hover": "#fcf2e6",
  "borderColor": "#c8d1e0",
  "borderColor_danger": "#de1b1b",
  "borderColor_danger_active": "#b80d0d",
  "borderColor_danger_focus": "#b80d0d",
  "borderColor_danger_hover": "#f55353",
  "borderColor_success": "#2a854e",
  "borderColor_success_active": "#20693d",
  "borderColor_success_focus": "#20693d",
  "borderColor_success_hover": "#3ba164",
  "borderColor_theme": "#17827b",
  "borderColor_theme_active": "#116963",
  "borderColor_theme_focus": "#116963",
  "borderColor_theme_hover": "#28a199",
  "borderColor_warning": "#ad5f00",
  "borderColor_warning_active": "#8a4d03",
  "borderColor_warning_focus": "#8a4d03",
  "borderColor_warning_hover": "#cf7911",
  "borderRadius_1": "0.1875em",
  "boxShadow_1": "0 1px 2px 0 rgba(0,0,0,0.2), 0 2px 4px 0 rgba(0,0,0,0.2)",
  "boxShadow_2": "0 2px 4px 0 rgba(0,0,0,0.2), 0 4px 8px 0 rgba(0,0,0,0.2)",
  "boxShadow_3": "0 4px 8px 0 rgba(0,0,0,0.2), 0 8px 16px 0 rgba(0,0,0,0.2)",
  "boxShadow_4": "0 8px 16px 0 rgba(0,0,0,0.2), 0 20px 16px -8px rgba(0,0,0,0.2)",
  "boxShadow_5": "0 16px 24px 0 rgba(0,0,0,0.2), 0 32px 24px -16px rgba(0,0,0,0.2)",
  "boxShadow_focusInner": "#ffffff",
  "breakpoint_medium": "768px",
  "breakpoint_narrow": "512px",
  "breakpoint_wide": "1024px",
  "color": "#333840",
  "color_black": "#1d1f24",
  "color_danger": "#de1b1b",
  "color_dangerPrimary": "#ffffff",
  "color_danger_active": "#b80d0d",
  "color_danger_focus": "#de1b1b",
  "color_danger_hover": "#f55353",
  "color_disabled": "#afbacc",
  "color_gray_10": "#f5f7fa",
  "color_gray_100": "#333840",
  "color_gray_20": "#ebeff5",
  "color_gray_30": "#dde3ed",
  "color_gray_40": "#c8d1e0",
  "color_gray_50": "#afbacc",
  "color_gray_60": "#8e99ab",
  "color_gray_70": "#707a8a",
  "color_gray_80": "#58606e",
  "color_gray_90": "#434a54",
  "color_inverted": "#ffffff",
  "color_mouse": "#58606e",
  "color_readOnly": "#58606e",
  "color_required": "#de1b1b",
  "color_success": "#2a854e",
  "color_successPrimary": "#ffffff",
  "color_success_active": "#20693d",
  "color_success_focus": "#2a854e",
  "color_success_hover": "#3ba164",
  "color_theme": "#17827b",
  "color_themePrimary": "#ffffff",
  "color_theme_10": "#e4f7f6",
  "color_theme_100": "#092b29",
  "color_theme_20": "#a8ede9",
  "color_theme_30": "#6cd9d2",
  "color_theme_40": "#45bfb7",
  "color_theme_50": "#28a199",
  "color_theme_60": "#17827b",
  "color_theme_70": "#116963",
  "color_theme_80": "#0d524d",
  "color_theme_90": "#0b3d3a",
  "color_theme_active": "#116963",
  "color_theme_focus": "#17827b",
  "color_theme_hover": "#28a199",
  "color_warning": "#ad5f00",
  "color_warningPrimary": "#ffffff",
  "color_warning_active": "#8a4d03",
  "color_warning_focus": "#ad5f00",
  "color_warning_hover": "#cf7911",
  "color_white": "#ffffff",
  "direction": "ltr",
  "fontFamily": "\\"Open Sans\\"",
  "fontFamily_monospace": "\\"SF Mono\\", \\"Droid Sans Mono\\", \\"Source Code Pro\\", Monaco, Consolas, \\"Courier New\\", Courier, monospace",
  "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
  "fontSize_base": "16px",
  "fontSize_mouse": "0.6875em",
  "fontSize_prose": "1em",
  "fontSize_ui": "0.875em",
  "fontWeight_bold": 700,
  "fontWeight_extraBold": 800,
  "fontWeight_regular": 400,
  "fontWeight_semiBold": 600,
  "h1_color": "#333840",
  "h1_fontSize": "2.125em",
  "h1_fontWeight": 800,
  "h2_color": "#58606e",
  "h2_fontSize": "1.75em",
  "h2_fontWeight": 700,
  "h3_color": "#58606e",
  "h3_fontSize": "1.375em",
  "h3_fontWeight": 700,
  "h4_color": "#58606e",
  "h4_fontSize": "1.125em",
  "h4_fontWeight": 700,
  "h5_color": "#333840",
  "h5_fontSize": "0.875em",
  "h5_fontWeight": 700,
  "h6_color": "#58606e",
  "h6_fontSize": "0.875em",
  "h6_fontWeight": 400,
  "icon_color": "#58606e",
  "icon_color_danger": "#de1b1b",
  "icon_color_success": "#2a854e",
  "icon_color_theme": "#17827b",
  "icon_color_warning": "#ad5f00",
  "input_backgroundColor": "#ffffff",
  "input_backgroundColor_disabled": "#ebeff5",
  "input_color_placeholder": "#8e99ab",
  "lineHeight": 1.25,
  "lineHeight_heading": 1.25,
  "lineHeight_heading_small": 1.5,
  "lineHeight_prose": 1.5,
  "panel_backgroundColor": "#ffffff",
  "panel_backgroundColor_inverted": "#434a54",
  "panel_borderColor": "#ebeff5",
  "panel_borderColor_inverted": "#434a54",
  "size_jumbo": "3.25em",
  "size_large": "2.5em",
  "size_medium": "2em",
  "size_small": "1.5em",
  "space_inline_lg": "1.5em",
  "space_inline_md": "1em",
  "space_inline_sm": "0.5em",
  "space_inline_xl": "2em",
  "space_inline_xs": "0.25em",
  "space_inline_xxl": "4em",
  "space_inline_xxs": "0.125em",
  "space_inset_lg": "1.5em",
  "space_inset_md": "1em",
  "space_inset_sm": "0.5em",
  "space_stack_lg": "1.5em",
  "space_stack_md": "1em",
  "space_stack_sm": "0.5em",
  "space_stack_xl": "2em",
  "space_stack_xs": "0.25em",
  "space_stack_xxl": "4em",
  "space_stack_xxs": "0.125em",
  "well_backgroundColor": "#ebeff5",
  "well_backgroundColor_danger": "#fad4d4",
  "well_backgroundColor_success": "#abedc5",
  "well_backgroundColor_warning": "#fad8af",
  "well_borderColor_danger": "#fa8e8e",
  "well_borderColor_success": "#57c282",
  "well_borderColor_warning": "#e89c3f",
  "zIndex_100": 100,
  "zIndex_1600": 1600,
  "zIndex_200": 200,
  "zIndex_400": 400,
  "zIndex_800": 800,
}
`;

exports[`createTheme with colors with white value overrides value 1`] = `
Object {
  "backgroundColor_active": "#ebeff5",
  "backgroundColor_dangerPrimary": "#de1b1b",
  "backgroundColor_dangerPrimary_active": "#b80d0d",
  "backgroundColor_dangerPrimary_focus": "#de1b1b",
  "backgroundColor_dangerPrimary_hover": "#f55353",
  "backgroundColor_danger_active": "#fad4d4",
  "backgroundColor_danger_focus": "#faf0f0",
  "backgroundColor_danger_hover": "#faf0f0",
  "backgroundColor_disabled": "#dde3ed",
  "backgroundColor_focus": "#f5f7fa",
  "backgroundColor_hover": "#f5f7fa",
  "backgroundColor_successPrimary": "#2a854e",
  "backgroundColor_successPrimary_active": "#20693d",
  "backgroundColor_successPrimary_focus": "#2a854e",
  "backgroundColor_successPrimary_hover": "#3ba164",
  "backgroundColor_success_active": "#abedc5",
  "backgroundColor_success_focus": "#e1faeb",
  "backgroundColor_success_hover": "#e1faeb",
  "backgroundColor_themePrimary": "#3272d9",
  "backgroundColor_themePrimary_active": "#1d5bbf",
  "backgroundColor_themePrimary_focus": "#3272d9",
  "backgroundColor_themePrimary_hover": "#5691f0",
  "backgroundColor_theme_selected": "#f0f5fc",
  "backgroundColor_theme_selectedActive": "#accbfc",
  "backgroundColor_theme_selectedHover": "#cfe0fc",
  "backgroundColor_warningPrimary": "#ad5f00",
  "backgroundColor_warningPrimary_active": "#8a4d03",
  "backgroundColor_warningPrimary_focus": "#ad5f00",
  "backgroundColor_warningPrimary_hover": "#cf7911",
  "backgroundColor_warning_active": "#fad8af",
  "backgroundColor_warning_focus": "#fcf2e6",
  "backgroundColor_warning_hover": "#fcf2e6",
  "borderColor": "#c8d1e0",
  "borderColor_danger": "#de1b1b",
  "borderColor_danger_active": "#b80d0d",
  "borderColor_danger_focus": "#b80d0d",
  "borderColor_danger_hover": "#f55353",
  "borderColor_success": "#2a854e",
  "borderColor_success_active": "#20693d",
  "borderColor_success_focus": "#20693d",
  "borderColor_success_hover": "#3ba164",
  "borderColor_theme": "#3272d9",
  "borderColor_theme_active": "#1d5bbf",
  "borderColor_theme_focus": "#1d5bbf",
  "borderColor_theme_hover": "#5691f0",
  "borderColor_warning": "#ad5f00",
  "borderColor_warning_active": "#8a4d03",
  "borderColor_warning_focus": "#8a4d03",
  "borderColor_warning_hover": "#cf7911",
  "borderRadius_1": "0.1875em",
  "boxShadow_1": "0 1px 2px 0 rgba(0,0,0,0.2), 0 2px 4px 0 rgba(0,0,0,0.2)",
  "boxShadow_2": "0 2px 4px 0 rgba(0,0,0,0.2), 0 4px 8px 0 rgba(0,0,0,0.2)",
  "boxShadow_3": "0 4px 8px 0 rgba(0,0,0,0.2), 0 8px 16px 0 rgba(0,0,0,0.2)",
  "boxShadow_4": "0 8px 16px 0 rgba(0,0,0,0.2), 0 20px 16px -8px rgba(0,0,0,0.2)",
  "boxShadow_5": "0 16px 24px 0 rgba(0,0,0,0.2), 0 32px 24px -16px rgba(0,0,0,0.2)",
  "boxShadow_focusInner": "custom_white",
  "breakpoint_medium": "768px",
  "breakpoint_narrow": "512px",
  "breakpoint_wide": "1024px",
  "color": "#333840",
  "color_black": "#1d1f24",
  "color_danger": "#de1b1b",
  "color_dangerPrimary": "custom_white",
  "color_danger_active": "#b80d0d",
  "color_danger_focus": "#de1b1b",
  "color_danger_hover": "#f55353",
  "color_disabled": "#afbacc",
  "color_gray_10": "#f5f7fa",
  "color_gray_100": "#333840",
  "color_gray_20": "#ebeff5",
  "color_gray_30": "#dde3ed",
  "color_gray_40": "#c8d1e0",
  "color_gray_50": "#afbacc",
  "color_gray_60": "#8e99ab",
  "color_gray_70": "#707a8a",
  "color_gray_80": "#58606e",
  "color_gray_90": "#434a54",
  "color_inverted": "custom_white",
  "color_mouse": "#58606e",
  "color_readOnly": "#58606e",
  "color_required": "#de1b1b",
  "color_success": "#2a854e",
  "color_successPrimary": "custom_white",
  "color_success_active": "#20693d",
  "color_success_focus": "#2a854e",
  "color_success_hover": "#3ba164",
  "color_theme": "#3272d9",
  "color_themePrimary": "custom_white",
  "color_theme_10": "#f0f5fc",
  "color_theme_100": "#15233b",
  "color_theme_20": "#cfe0fc",
  "color_theme_30": "#accbfc",
  "color_theme_40": "#84b1fa",
  "color_theme_50": "#5691f0",
  "color_theme_60": "#3272d9",
  "color_theme_70": "#1d5bbf",
  "color_theme_80": "#114599",
  "color_theme_90": "#103570",
  "color_theme_active": "#1d5bbf",
  "color_theme_focus": "#3272d9",
  "color_theme_hover": "#5691f0",
  "color_warning": "#ad5f00",
  "color_warningPrimary": "custom_white",
  "color_warning_active": "#8a4d03",
  "color_warning_focus": "#ad5f00",
  "color_warning_hover": "#cf7911",
  "color_white": "custom_white",
  "direction": "ltr",
  "fontFamily": "\\"Open Sans\\"",
  "fontFamily_monospace": "\\"SF Mono\\", \\"Droid Sans Mono\\", \\"Source Code Pro\\", Monaco, Consolas, \\"Courier New\\", Courier, monospace",
  "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
  "fontSize_base": "16px",
  "fontSize_mouse": "0.6875em",
  "fontSize_prose": "1em",
  "fontSize_ui": "0.875em",
  "fontWeight_bold": 700,
  "fontWeight_extraBold": 800,
  "fontWeight_regular": 400,
  "fontWeight_semiBold": 600,
  "h1_color": "#333840",
  "h1_fontSize": "2.125em",
  "h1_fontWeight": 800,
  "h2_color": "#58606e",
  "h2_fontSize": "1.75em",
  "h2_fontWeight": 700,
  "h3_color": "#58606e",
  "h3_fontSize": "1.375em",
  "h3_fontWeight": 700,
  "h4_color": "#58606e",
  "h4_fontSize": "1.125em",
  "h4_fontWeight": 700,
  "h5_color": "#333840",
  "h5_fontSize": "0.875em",
  "h5_fontWeight": 700,
  "h6_color": "#58606e",
  "h6_fontSize": "0.875em",
  "h6_fontWeight": 400,
  "icon_color": "#58606e",
  "icon_color_danger": "#de1b1b",
  "icon_color_success": "#2a854e",
  "icon_color_theme": "#3272d9",
  "icon_color_warning": "#ad5f00",
  "input_backgroundColor": "custom_white",
  "input_backgroundColor_disabled": "#ebeff5",
  "input_color_placeholder": "#8e99ab",
  "lineHeight": 1.25,
  "lineHeight_heading": 1.25,
  "lineHeight_heading_small": 1.5,
  "lineHeight_prose": 1.5,
  "panel_backgroundColor": "custom_white",
  "panel_backgroundColor_inverted": "#434a54",
  "panel_borderColor": "#ebeff5",
  "panel_borderColor_inverted": "#434a54",
  "size_jumbo": "3.25em",
  "size_large": "2.5em",
  "size_medium": "2em",
  "size_small": "1.5em",
  "space_inline_lg": "1.5em",
  "space_inline_md": "1em",
  "space_inline_sm": "0.5em",
  "space_inline_xl": "2em",
  "space_inline_xs": "0.25em",
  "space_inline_xxl": "4em",
  "space_inline_xxs": "0.125em",
  "space_inset_lg": "1.5em",
  "space_inset_md": "1em",
  "space_inset_sm": "0.5em",
  "space_stack_lg": "1.5em",
  "space_stack_md": "1em",
  "space_stack_sm": "0.5em",
  "space_stack_xl": "2em",
  "space_stack_xs": "0.25em",
  "space_stack_xxl": "4em",
  "space_stack_xxs": "0.125em",
  "well_backgroundColor": "#ebeff5",
  "well_backgroundColor_danger": "#fad4d4",
  "well_backgroundColor_success": "#abedc5",
  "well_backgroundColor_warning": "#fad8af",
  "well_borderColor_danger": "#fa8e8e",
  "well_borderColor_success": "#57c282",
  "well_borderColor_warning": "#e89c3f",
  "zIndex_100": 100,
  "zIndex_1600": 1600,
  "zIndex_200": 200,
  "zIndex_400": 400,
  "zIndex_800": 800,
}
`;

exports[`createTheme with overrides overrides value 1`] = `
Object {
  "backgroundColor_active": "#ebeff5",
  "backgroundColor_dangerPrimary": "#de1b1b",
  "backgroundColor_dangerPrimary_active": "#b80d0d",
  "backgroundColor_dangerPrimary_focus": "#de1b1b",
  "backgroundColor_dangerPrimary_hover": "#f55353",
  "backgroundColor_danger_active": "#fad4d4",
  "backgroundColor_danger_focus": "#faf0f0",
  "backgroundColor_danger_hover": "#faf0f0",
  "backgroundColor_disabled": "#dde3ed",
  "backgroundColor_focus": "#f5f7fa",
  "backgroundColor_hover": "#f5f7fa",
  "backgroundColor_successPrimary": "#2a854e",
  "backgroundColor_successPrimary_active": "#20693d",
  "backgroundColor_successPrimary_focus": "#2a854e",
  "backgroundColor_successPrimary_hover": "#3ba164",
  "backgroundColor_success_active": "#abedc5",
  "backgroundColor_success_focus": "#e1faeb",
  "backgroundColor_success_hover": "#e1faeb",
  "backgroundColor_themePrimary": "#3272d9",
  "backgroundColor_themePrimary_active": "#1d5bbf",
  "backgroundColor_themePrimary_focus": "#3272d9",
  "backgroundColor_themePrimary_hover": "#5691f0",
  "backgroundColor_theme_selected": "#f0f5fc",
  "backgroundColor_theme_selectedActive": "#accbfc",
  "backgroundColor_theme_selectedHover": "#cfe0fc",
  "backgroundColor_warningPrimary": "#ad5f00",
  "backgroundColor_warningPrimary_active": "#8a4d03",
  "backgroundColor_warningPrimary_focus": "#ad5f00",
  "backgroundColor_warningPrimary_hover": "#cf7911",
  "backgroundColor_warning_active": "#fad8af",
  "backgroundColor_warning_focus": "#fcf2e6",
  "backgroundColor_warning_hover": "#fcf2e6",
  "borderColor": "#c8d1e0",
  "borderColor_danger": "#de1b1b",
  "borderColor_danger_active": "#b80d0d",
  "borderColor_danger_focus": "#b80d0d",
  "borderColor_danger_hover": "#f55353",
  "borderColor_success": "#2a854e",
  "borderColor_success_active": "#20693d",
  "borderColor_success_focus": "#20693d",
  "borderColor_success_hover": "#3ba164",
  "borderColor_theme": "#3272d9",
  "borderColor_theme_active": "#1d5bbf",
  "borderColor_theme_focus": "#1d5bbf",
  "borderColor_theme_hover": "#5691f0",
  "borderColor_warning": "#ad5f00",
  "borderColor_warning_active": "#8a4d03",
  "borderColor_warning_focus": "#8a4d03",
  "borderColor_warning_hover": "#cf7911",
  "borderRadius_1": "0.1875em",
  "boxShadow_1": "0 1px 2px 0 rgba(0,0,0,0.2), 0 2px 4px 0 rgba(0,0,0,0.2)",
  "boxShadow_2": "0 2px 4px 0 rgba(0,0,0,0.2), 0 4px 8px 0 rgba(0,0,0,0.2)",
  "boxShadow_3": "0 4px 8px 0 rgba(0,0,0,0.2), 0 8px 16px 0 rgba(0,0,0,0.2)",
  "boxShadow_4": "0 8px 16px 0 rgba(0,0,0,0.2), 0 20px 16px -8px rgba(0,0,0,0.2)",
  "boxShadow_5": "0 16px 24px 0 rgba(0,0,0,0.2), 0 32px 24px -16px rgba(0,0,0,0.2)",
  "boxShadow_focusInner": "#ffffff",
  "breakpoint_medium": "768px",
  "breakpoint_narrow": "512px",
  "breakpoint_wide": "1024px",
  "color": "#333840",
  "color_black": "#1d1f24",
  "color_danger": "#de1b1b",
  "color_dangerPrimary": "#ffffff",
  "color_danger_active": "#b80d0d",
  "color_danger_focus": "#de1b1b",
  "color_danger_hover": "#f55353",
  "color_disabled": "#afbacc",
  "color_gray_10": "#f5f7fa",
  "color_gray_100": "#333840",
  "color_gray_20": "#ebeff5",
  "color_gray_30": "#dde3ed",
  "color_gray_40": "#c8d1e0",
  "color_gray_50": "#afbacc",
  "color_gray_60": "#8e99ab",
  "color_gray_70": "#707a8a",
  "color_gray_80": "#58606e",
  "color_gray_90": "#434a54",
  "color_inverted": "#ffffff",
  "color_mouse": "#58606e",
  "color_readOnly": "#58606e",
  "color_required": "#de1b1b",
  "color_success": "#2a854e",
  "color_successPrimary": "#ffffff",
  "color_success_active": "#20693d",
  "color_success_focus": "#2a854e",
  "color_success_hover": "#3ba164",
  "color_theme": "#3272d9",
  "color_themePrimary": "#ffffff",
  "color_theme_10": "#f0f5fc",
  "color_theme_100": "#15233b",
  "color_theme_20": "#cfe0fc",
  "color_theme_30": "#accbfc",
  "color_theme_40": "#84b1fa",
  "color_theme_50": "#5691f0",
  "color_theme_60": "#3272d9",
  "color_theme_70": "#1d5bbf",
  "color_theme_80": "#114599",
  "color_theme_90": "#103570",
  "color_theme_active": "#1d5bbf",
  "color_theme_focus": "#3272d9",
  "color_theme_hover": "#5691f0",
  "color_warning": "#ad5f00",
  "color_warningPrimary": "#ffffff",
  "color_warning_active": "#8a4d03",
  "color_warning_focus": "#ad5f00",
  "color_warning_hover": "#cf7911",
  "color_white": "#ffffff",
  "direction": "rtl",
  "fontFamily": "\\"Open Sans\\"",
  "fontFamily_monospace": "\\"SF Mono\\", \\"Droid Sans Mono\\", \\"Source Code Pro\\", Monaco, Consolas, \\"Courier New\\", Courier, monospace",
  "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
  "fontSize_base": "16px",
  "fontSize_mouse": "0.6875em",
  "fontSize_prose": "1em",
  "fontSize_ui": "0.875em",
  "fontWeight_bold": 700,
  "fontWeight_extraBold": 800,
  "fontWeight_regular": 400,
  "fontWeight_semiBold": 600,
  "h1_color": "#333840",
  "h1_fontSize": "2.125em",
  "h1_fontWeight": 800,
  "h2_color": "#58606e",
  "h2_fontSize": "1.75em",
  "h2_fontWeight": 700,
  "h3_color": "#58606e",
  "h3_fontSize": "1.375em",
  "h3_fontWeight": 700,
  "h4_color": "#58606e",
  "h4_fontSize": "1.125em",
  "h4_fontWeight": 700,
  "h5_color": "#333840",
  "h5_fontSize": "0.875em",
  "h5_fontWeight": 700,
  "h6_color": "#58606e",
  "h6_fontSize": "0.875em",
  "h6_fontWeight": 400,
  "icon_color": "#58606e",
  "icon_color_danger": "#de1b1b",
  "icon_color_success": "#2a854e",
  "icon_color_theme": "#3272d9",
  "icon_color_warning": "#ad5f00",
  "input_backgroundColor": "#ffffff",
  "input_backgroundColor_disabled": "#ebeff5",
  "input_color_placeholder": "#8e99ab",
  "lineHeight": 1.25,
  "lineHeight_heading": 1.25,
  "lineHeight_heading_small": 1.5,
  "lineHeight_prose": 1.5,
  "panel_backgroundColor": "#ffffff",
  "panel_backgroundColor_inverted": "#434a54",
  "panel_borderColor": "#ebeff5",
  "panel_borderColor_inverted": "#434a54",
  "size_jumbo": "3.25em",
  "size_large": "2.5em",
  "size_medium": "2em",
  "size_small": "1.5em",
  "space_inline_lg": "1.5em",
  "space_inline_md": "1em",
  "space_inline_sm": "0.5em",
  "space_inline_xl": "2em",
  "space_inline_xs": "0.25em",
  "space_inline_xxl": "4em",
  "space_inline_xxs": "0.125em",
  "space_inset_lg": "1.5em",
  "space_inset_md": "1em",
  "space_inset_sm": "0.5em",
  "space_stack_lg": "1.5em",
  "space_stack_md": "1em",
  "space_stack_sm": "0.5em",
  "space_stack_xl": "2em",
  "space_stack_xs": "0.25em",
  "space_stack_xxl": "4em",
  "space_stack_xxs": "0.125em",
  "well_backgroundColor": "#ebeff5",
  "well_backgroundColor_danger": "#fad4d4",
  "well_backgroundColor_success": "#abedc5",
  "well_backgroundColor_warning": "#fad8af",
  "well_borderColor_danger": "#fa8e8e",
  "well_borderColor_success": "#57c282",
  "well_borderColor_warning": "#e89c3f",
  "zIndex_100": 100,
  "zIndex_1600": 1600,
  "zIndex_200": 200,
  "zIndex_400": 400,
  "zIndex_800": 800,
}
`;
